# ohlc-processor-actor

./: Cargo.toml  README.md
ohlc-processor/: Cargo.toml
ohlc-processor/src/: actor.rs  args.rs  error.rs  lib.rs  ohlc.rs  processor.rs
ohlc-runner/: Cargo.toml  out.txt
ohlc-runner/src/: main.rs
