[package]
name = "ohlc-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# own dependencies
ohlc-processor = { path = "../ohlc-processor" }

# crates.io dependencies
tokio = { version = "1.2", features = ["full"] }
futures-util = "0.3.25"
thiserror = "1.0"
displaydoc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1.1", features = ["derive"] }
serde-aux = "4.1.2"
anyhow = "1.0"
